katars/tests/snaps/snapshots/snap_errors__continue_outside_loop.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"continue\")"
---
Error: continue outside of loop
   ╭─[<test>:1:1]
   │
 1 │ continue
   │ ────┬───  
   │     ╰───── continue outside of loop
   │ 
   │ Note: continue can only be used inside while or for loops
───╯
